--- a/BlogBackend/package.json
+++ b/BlogBackend/package.json
@@ -15,7 +15,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js  --ignore './blogsapp/'"
+     "start": "node server.js"
   },
   "author": "kunal",
   "license": "ISC",
