--- a/BlogBackend/package.json
+++ b/BlogBackend/package.json
@@ -16,6 +16,7 @@
   "main": "index.js",
   "scripts": {
       "start": "node index.js",
+       "dev": "nodemon index.js"
   },
   "author": "kunal",
   "license": "ISC",
