--- a/BlogBackend/package.json
+++ b/BlogBackend/package.json
@@ -15,7 +15,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js  --ignore './blogsapp/'"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "kunal",
   "license": "ISC",
